GKE00568/new deployment/non_compliant_k8s_objects/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
  namespace: gke00568-non-compliant-ns
  labels:
    app.kubernetes.io/name: nginx
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
