GKE00568/new deployment/non_compliant_k8s_objects/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke00568-non-compliant-ingress-1
  namespace: gke00568-non-compliant-ns
  labels:
    app.kubernetes.io/name: nginx
spec:
  defaultBackend:
    service:
      name: nginx-service-2
      port:
        number: 80
